ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-app-ingress
spec:
  ingressClassName: cilium
  # tls:
  # - hosts:
  #   - simple-app.local
  #   secretName: simple-app-tls
  rules:
  # - host: simple-app.local
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: simple-app-service
  #           port:
  #             number: 3000
  - host: mongo-express.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongo-express-service
            port:
              number: 8081
